# decision-maker-api

./: .gitignore  mypy.ini  pyproject.toml
app/: main.py
app/config/: __init__.py  logger.py  settings.py
app/configs/: __init__.py  logger.py  settings.py
src/: main.py
src/config/: __init__.py  firebase.py  server.py  settings.py
tests/configs/: test_settings.py
