[project]
name = "decision-maker-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "python-json-logger>=3.3.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
]
